<resources>
    <string name="app_name">Movere</string>

    <string name="titleAboutProgram">About Program</string>
    <string name="titleContacts">Contacts</string>
    <string name="titleEvents">Events</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="hintTypeMessage">Type a message...</string>
    <string name="hintTypeName">Name</string>
    <string name="hintTypePhone">Phone (not necessary)</string>

    <string name="hintTitleEvent">Event name...</string>
    <string name="hintDescriptionEvent">Event description...</string>
    <string name="hintSpinnerVehicle">Your vehicle is a ...</string>

    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>


    <string name="markerSnippet">You</string>


    <string name="toastAuthFailed">Authentication failed.</string>
    <string name="toastAuthFinish">Authorization is complete.</string>
    <string name="toastPickFinish">Loading is complete.</string>
    <string name="toastEnterName">Please enter your name!</string>
    <string name="toastDelAccount">Your account has been deleted.</string>
    <string name="toastDelAccountError">An error occurred while deleting the account. Try again.</string>
    <string name="toasNotAuth">You are not authorized.</string>
    <string name="toasAddFriend">added.</string>
    <string name="toasDelFriend">removed.</string>
    <string name="toasDontHaveChat">The message history is empty.</string>
    <string name="toasRemoveChat">Chat was successfully deleted.</string>
    <string name="toasRemoveChatError">An error occurred while deleting the chat. Try again.</string>
    <string name="toastSendMail">Sending letter...</string>
    <string name="toastDataUpdated">Data updated.</string>
    <string name="toastSendSOS">message sent out</string>
    <string name="toastStartEvent">set the start date of the event</string>
    <string name="toastStopEvent">set the stop date of the event</string>
    <string name="toastCannotChangeData">currently, you cannot change your data</string>

    <string name="snackCreateEvent">event created</string>


    <string name="titleInstruction">Instructions</string>

    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnContact">contact</string>
    <string name="btnWay">route</string>
    <string name="btnChat">chat</string>
    <string name="btnPrivacyPolicy"><b><u>Privacy Policy</u></b>\n\n</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnSave">Save</string>
    <string name="btnAddFriend">Add to Friend</string>
    <string name="btnDelFriend">Remove from friends</string>
    <string name="btnFabOnGPS">GPS on</string>
    <string name="btnFabOffGPS">GPS off</string>
    <string name="btnFabLocation">Location</string>
    <string name="btnGetStarted">Start</string>


    <string name="checkDoNotShow">do not show again</string>

    <string name="textName">name:</string>
    <string name="textPhone">phone:</string>

    <string name="textWorkersProject">Work on the project</string>
    <string name="textDeleteAccount">delete account</string>
    <string name="textImage">picture</string>
    <string name="textTitleRemind">Remind!</string>
    <string name="textRadiusEvent">The event will be available to everyone within a radius of 18.6 mile (30 km) from the destination.</string>
    <string name="textRadiusEventSOS">The message will be received by everyone within a radius of 18.6 mile (30 km) from your location on the map (check your location). The status of the help will be an asset for only one hour.</string>
    <string name="textErrorAddress">enter address</string>
    <string name="textErrorEventTitle">enter event name</string>
    <string name="textErrorEventDescription">enter event description</string>
    <string name="textRemoveContact">Remove the contact and all correspondence with him?</string>
    <string name="textAddress">address: %1$s</string>
    <string name="textOpening">opening: %1$s</string>
    <string name="textClosing">closing: %1$s</string>
    <string name="textRemovOldEvent">the event will be deleted automatically within 24 hours after the expiry date</string>


    <string name="navInstructions">Instructions</string>
    <string name="navShare">Share</string>
    <string name="navAboutProgram">About the program</string>
    <string name="navFromDeveloper">More from developer</string>
    <string name="navFeedback">Feedback</string>
    <string name="navPlaceFriend">Place on the map</string>
    <string name="navWay">route</string>
    <string name="navContacts">Contacts</string>
    <string name="navSOS">Signal SOS</string>
    <string name="navEvent">Events</string>
    <string name="navViewAllUsers">All users</string>


    <string name="dialogProgressAuth">Please wait\ncompletion of authorization.</string>
    <string name="dialogProgressAuthFinish">Authorization complete.</string>

    <string name="dialogProgressUpload">Please wait\nfor the download to complete.</string>
    <string name="dialogProgressUploadFinish">Loading is complete.</string>
    <string name="dialogProgressUploadFinishError">Во время загрузки произошла ошибка. Попробуйте еще раз.</string>

    <string name="dialogAuth">\t\tPlease Log in!\n
\t\tIn order to use the chat and map of the program it is necessary for you to log in.\n
\t\tBy login into the program you agree to our privacy policy and terms of use of the program: Your email address, name and surname that are written in your email account, and your location will be used in the program.\n
</string>

    <string name="dialogInstruction">\t\tWelcome to Movere!!!\n\n
    \t\tThe program is intended to help motorcyclists on the road, or on vacation. Moreover, you can find friends with the common interest which is – bikes!!!\n\n
    \t\tWhen starting the app your location is determined by your device and marked on the map. This way, nearest or passing by motorcyclists who also use this program will be able to contact you.\n\n
    \t\tThe program provides statuses such as:\n
    \t\t\t1)Want to ride;\n
    \t\t\t2)On the way\n
    \t\t\t3)At home;\n
    \t\t\t4)Sos;\n
    \t\t\t5)With friends;\n\n
    \t\tChoosing a status shows your current condition for the present time.\n\n
    \t\tThe program includes a chat room and a route builder. In order to contact other motorcyclists or to build your way to him, you need to simply mark the chosen motorcyclist on the map and select your desired function.\n\n
    \t\tThanks for choosing us!!!\n\n
    \t\tUse, comment and write your suggestions in the comments or personally to us!! Let\'s make the app better together!!!\n\n
</string>


    <string name="dialogDelAccount">Are you sure you want to delete the account and leave the program?</string>
    <string name="dialogAddNewFriends">You do not have any friends! Add friends to your list or invite your friends to the program.</string>
    <string name="dialogDelFriends">Are you sure you want to remove a friend from the list?</string>


    <array name="arrWorkers">
        <item>Vadim Matatov</item>
        <item>Nikita Matatov</item>
        <item>Yury Matatov</item>
    </array>

    <array name="arrMails">
        <item>Matatvolga@gmail.com</item>
        <item>Docmat63@gmail.com</item>
        <item>Matatov1989@gmail.com</item>
    </array>


    <string name="textSOS">SOS</string>


    <!-- new -->
    <array name="arrTypeVehicle">
        <item>Stroller</item>
        <item>Moto</item>
        <item>Car</item>
        <item>Truck</item>
        <item>SOS</item>
    </array>

    <string name="textTypeVehicle">%1$s driver</string>
    <string name="textLastVisit">Last visit:</string>

    <string name="textNeedsHelp">%1$s needs help.</string>

    <string name="googleMapsAPI">AIzaSyAi7AvWBBJvFj1tAKJcpbDBU4QIERcPYcU</string>

    <string name="actionNewEvent">new event</string>

    <string name="textErrorName">enter your name</string>


    <!-- for intro activity -->
    <string name="screenTitleAuth">Authentication</string>
    <string name="screenDescAuth">Authentication and use of the program are FREE! When registering, you do not need to remember a new username and password. Movere uses your Google account to log in.</string>

    <string name="screenTitleNavigation">Navigation</string>
    <string name="screenDescNavigation">Movere determines your location and displays it on a Google map in order to unite all motor vehicle enthusiasts into. This makes it possible to see on the map the closest users, as well as users of other cities and countries and get directions to another user.</string>

    <string name="screenTitleCommunication">Communication</string>
    <string name="screenDescCommunication">Movere uses your phone’s Internet connection (4G / 3G / 2G / EDGE or WiFi, if available), for easy and quick communication with any user through the chat provided in the program. If there is no connection or the phone is disconnected, Movere services will deliver you all the missed messages the next time the program starts.</string>

    <string name="screenTitleNews">News</string>
    <string name="screenDescNews">Movere will not let you miss events related to cars: exhibitions, parades, races and all kinds of shows. All events are available at the user s location within a radius of 30 km. Where does the news come from? Everything is very simple! You, as a user, and you are familiar with a certain event, you can create it by filling out a small form of creating an event.</string>

    <string name="screenTitleHelp">Help</string>
    <string name="screenDescHelp">The main feature of Movere is that in case of any problems on the road, with good telephone connection, can ask for help to users (community) of Movere send an SOS signal to all users within a radius of 30 km.</string>

    <string name="screenTitleTotal">Total</string>
    <string name="screenDescTotal">In total, we have a simple social program that allows us to be in touch with the news, make new friends both in your own city and around the world. In the event of a difficult situation, you can quickly and easily seek help from our Movere community. The Movere system is designed so that the more users, the faster you will be helped and there will be a small chance that you will miss something important related to cars. Therefore, do not be lazy and advise Movere to your best friend, or share the link in the news feed of social networks!</string>




    <string name="strProgressBar">Please wait...</string>

    <string name="toastError">An error has occurred. Try again.</string>
    <string name="toastAuthError">An error occurred during authorization. Try again.</string>
    <string name="toastMessageError">The message was not delivered.</string>
    <string name="toastRemoveContact">The chat contact has been deleted.</string>


    <string name="dialogPermissionLocation">If you want to be seen by other program participants, you need to give permission for geolocation.</string>


    <string name="textVersion">Version: 2.0 alpha</string>


    <string name="textUserNeedsHelp">%1$s needs help!!!</string>

</resources>